@@ -1,3 +1,9 @@
+2007-02-08  Martin Leidig  <mleidig@schlund.de>
+
+	* build.xml: removed unnecessary dist.type=prerelease option,
+	release and build suffice, build is with and release without
+	svn revision as version suffix
+
 2007-02-07  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixcore/workflow/Context.java: fixed bug, added
